fixing arrow btn spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@
 }
 
 .arrow-btn-macro {
-  @apply ring-2 bg-black hover:ring-gray-400 py-1 px-4 rounded-xl drop-shadow-[6px_6px_0px_#222222];
+  @apply mr-4 ring-2 bg-black hover:ring-gray-400 py-1 px-4 rounded-xl drop-shadow-[6px_6px_0px_#222222];
 }
 
 .reg-btn-macro {
